--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
 body {
     background-image: url("images/background_image.jpg");
     color: white;
@@ -27,7 +31,7 @@ header span {
 }
 .inputs {
     padding: 10px;
-    width: 320px;
+    width: 90%;
 }
 .feedback {
     margin-bottom: 10px;
