--- a/style.css
+++ b/style.css
@@ -21,22 +21,23 @@ header span {
     display: block;
     padding: 20px;
     margin: auto;
-}
-.form {
     padding: 20px;
     background-color:rgba(0, 0, 0, 0.8)
 }
 .box {
     margin-bottom: 7px;
 }
-.inputs {
+.box label {
+    margin-bottom: 30px;
+}
+.box input {
     padding: 10px;
     width: 90%;
 }
 .feedback {
     margin-bottom: 10px;
 }
-.submit {
+.btn {
     margin-left: 30%;
     margin-top: 5px;
     width: 40%;
