--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 * {
     padding: 0px;
     margin: 0px;
+    
 }
 body {
     background-image: url("images/background_image.jpg");
     color: white;
     background-repeat: no-repeat;
     background-size: cover;
+    
+ 
 } 
 header {
     text-align: center;
@@ -27,15 +30,15 @@ header span {
 .box {
     margin-bottom: 7px;
 }
-.box label {
-    margin-bottom: 30px;
-}
 .box input {
-    padding: 10px;
+    padding: 7px;
     width: 90%;
 }
-.feedback {
+.box-cr {
     margin-bottom: 10px;
+}
+.box-cr textarea {
+    width: 90%;
 }
 .btn {
     margin-left: 30%;
@@ -45,9 +48,4 @@ header span {
     padding: 5px;
     border-radius: 20px;
     background-color: red     
-}
-@media (max-width:700px) {
-.container {
-width: 90%;
-}
 }
