--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
 * {
     padding: 0px;
-    margin: 0px;
-    
+    margin: 0px;   
+    box-sizing: border-box;
 }
 body {
     background-image: url("images/background_image.jpg");
     color: white;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: rgba(0, 0, 0, 0.2);
+    background-blend-mode: multiply;
     
- 
+    
 } 
-header {
+.main-header {
     text-align: center;
     font-weight: bolder;
     font-size: larger;
 }
-header span {
+.main-header span {
     color: red;
 } 
 .content {
@@ -32,20 +34,22 @@ header span {
 }
 .box input {
     padding: 7px;
-    width: 90%;
+    width: 100%;
 }
 .box-cr {
     margin-bottom: 10px;
 }
 .box-cr textarea {
-    width: 95%;
+    width: 100%;
 }
 .btn {
+    font-weight: bolder;
     margin-left: 35%;
     margin-top: 5px;
     width: 30%;
     color: white;
     padding: 5px;
     border-radius: 20px;
-    background-color: red     
+    background-color: red  
+       
 }
